[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/space_shooter_pack/Graphics/spritesheets/ship.png" type="Texture" id=1]
[ext_resource path="res://src/Ship/Ship.gd" type="Script" id=2]
[ext_resource path="res://src/Bullets/BulletShip.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/space_shooter_pack/Graphics/spritesheets/explosion.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 16, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 48, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "left_tilte",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "straight",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "right_tilte",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=17]
radius = 7.0
height = 2.0

[node name="Ship" type="KinematicBody2D" groups=[
"Ship",
]]
position = Vector2( 0, 4 )
collision_layer = 7
collision_mask = 7
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
Bullet = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 16 )
animation = "straight"
speed_scale = 2.0
playing = true

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="InfiniteMode" type="Timer" parent="ShootCooldown"]
wait_time = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 17 )
disabled = true

[node name="ShootPosition" type="Position2D" parent="."]
position = Vector2( 0, -12 )

[node name="StartAnimationTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
autostart = true

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="InvincibilityAnimationTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="PowerUpTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
[connection signal="timeout" from="InvincibilityAnimationTimer" to="." method="_on_InvincibilityAnimationTimer_timeout"]
[connection signal="timeout" from="PowerUpTimer" to="." method="disable_power_up"]
